--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dipanjan & Ankana Wedding Invitation</title>
-    <audio controls autoplay style="">
+    <audio controls autoplay  muted style=" display : none">
         <source src="./Pal Pal Dil Ke Paas  Flute Cover by Varsha Bhaskar Acharya - Varsha Acharya.mp3" type="audio/mp3">
     </audio>
     <style>
@@ -909,4 +909,5 @@
         };
     </script>
 </body>
+
 </html>
