Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -613,8 +613,9 @@
     </style>
 </head>
 <body>
-    <audio controls autoplay  muted style=" display : none">
+    <audio controls autoplay style=" display : none">
         <source src="./Pal Pal Dil Ke Paas  Flute Cover by Varsha Bhaskar Acharya - Varsha Acharya.mp3" type="audio/mp3">
+        <source src="./Pal Pal Dil Ke Paas  Flute Cover by Varsha Bhaskar Acharya - Varsha Acharya.wav" type="audio/wav">
     </audio>
     <div class="bg-animations" id="bgAnimations"></div>
     <div class="love-overlay" id="loveOverlay"></div>
@@ -911,4 +912,5 @@
 </body>
 
 </html>
+
 
