Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
     <div class="love-overlay" id="loveOverlay"></div>
 
     <div class="page active" id="page1">
-        <div class="welcome-title">✨ Wedding Invitation ✨</div>
+        <div class="welcome-title">✨ Reception Invitation ✨</div>
         <div class="couple-names">Dipanjan & Ankana</div>
         <div class="input-container">
             <h2>Please Enter Your Name</h2>
@@ -912,5 +912,6 @@
 </body>
 
 </html>
+
 
 
